// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render text input 1`] = `
<input
  className="input"
  type="text"
/>
`;

exports[`Input render text input highlight 1`] = `
<input
  className="input input--highlight"
  type="text"
/>
`;

exports[`Input render text with gray theme 1`] = `
<input
  className="input input--gray"
  type="text"
/>
`;

exports[`Input render with formatted phone number 1`] = `
<input
  className="input"
  type="text"
  value="(123) 456-7890"
/>
`;
